# jupyterlab-sql-plugin

./: .gitignore  .prettierignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  conftest.py  install.json  package.json  pyproject.toml  setup.py
.github/workflows/: build.yml  check-release.yml  update-integration-tests.yml
binder/: environment.yml  postBuild
jupyter-config/nb-config/: jupyterlab_sql_plugin.json
jupyter-config/server-config/: jupyterlab_sql_plugin.json
jupyterlab_sql_plugin/: __init__.py  executor.py  handlers.py
jupyterlab_sql_plugin/tests/: test_cache.py  test_connection_url.py  test_request_decoder.py  test_responses.py  test_schema_loader.py  test_serializer.py
schema/: plugin.json
src/: handler.ts  index.ts  page.ts  tracker.ts  widget.ts
src/__tests__/: jupyterlab_sql_plugin.spec.ts
src/api/: databaseStructure.ts  query.ts  server.ts  tableStructure.ts
src/components/: ResultsTable.ts  SingletonPanel.ts  Table.ts  ToolbarItems.ts
src/connection/: connectionEditor.tsx  index.ts
src/databaseSummary/: content.tsx  index.ts  toolbar.ts
src/query/: editor.ts  index.ts  response.ts  toolbar.ts
src/services/: connectionUrl.ts
src/services/dataGridExtensions/: columnWidth.ts  events.ts
src/tableSummary/: index.ts  toolbar.ts
style/: index.css
ui-tests/: package.json
ui-tests/tests/: jupyterlab_sql_plugin.spec.ts
